fix: update manifiest with all new/updated json files

--- a/packages/seed/src/manifest-example.json
+++ b/packages/seed/src/manifest-example.json
@@ -309,14 +309,14 @@
         "035-destinationReview-liebig.json"
     ],
     "postSponsorships": [
-        "017-postSponsorship-aventura-parana-004.json",
-        "018-postSponsorship-patrimonio-cultural-005.json",
-        "019-postSponsorship-gastronomia-regional-003.json",
-        "020-postSponsorship-termas-bienestar-002.json",
-        "021-postSponsorship-destinos-imperdibles-001.json"
+        "017-postSponsorship-aventura-parana.json",
+        "018-postSponsorship-patrimonio-cultural.json",
+        "019-postSponsorship-gastronomia-regional.json",
+        "020-postSponsorship-termas-bienestar.json",
+        "021-postSponsorship-destinos-imperdibles.json"
     ],
     "postSponsors": [
-        "012-postSponsor-postSponsor-aventura-paran.json",
+        "012-postSponsor-postSponsor-aventura-parana.json",
         "013-postSponsor-postSponsor-cultura-entrerriana.json",
         "014-postSponsor-postSponsor-sabores-del-litoral.json",
         "015-postSponsor-postSponsor-termas-unidas.json",
@@ -330,120 +330,93 @@
         "005-eventOrganizer-productores-rurales.json"
     ],
     "eventLocations": [
-        "001-eventLocation-colon-anfiteatro-colón.json",
-        "002-eventLocation-federacion-complejo-termal-federación.json",
-        "003-eventLocation-gualeguaychu-corsódromo-gualeguaychú.json",
-        "004-eventLocation-concepción-del-uruguay-palacio-san-josé.json",
+        "001-eventLocation-colon-anfiteatro-colon.json",
+        "002-eventLocation-federacion-complejo-termal-federacion.json",
+        "003-eventLocation-gualeguaychu-corsodromo-gualeguaychu.json",
+        "004-eventLocation-concepcion-del-uruguay-palacio-san-jose.json",
         "005-eventLocation-victoria-puerto-victoria.json",
         "006-eventLocation-concordia-teatro-pedro-barbero.json"
     ],
-    "attractions": [
-        "001-attraction-anfiteatro.json",
-        "002-attraction-aqua_parque_termal.json",
-        "003-attraction-area_protegida.json",
-        "004-attraction-aviario.json",
-        "005-attraction-balneario_municipal.json",
-        "006-attraction-bodegon_criollo.json",
-        "007-attraction-canal_navegable.json",
-        "008-attraction-cancha_futbol.json",
-        "009-attraction-casa_comidas.json",
-        "010-attraction-casa_historica.json",
-        "011-attraction-casino.json",
-        "012-attraction-catedral_principal.json",
-        "013-attraction-centro_agropecuario.json",
-        "014-attraction-centro_comercial.json",
-        "015-attraction-centro_cultural.json",
-        "016-attraction-centro_deportivo.json",
-        "017-attraction-centro_eventos.json",
-        "018-attraction-centro_historico.json",
-        "019-attraction-centro_interpretacion_citricola.json",
-        "020-attraction-centro_interpretacion_naturaleza.json",
-        "021-attraction-centro_recreativo.json",
-        "022-attraction-centro_spa_termal.json",
-        "023-attraction-centro_wellness.json",
-        "024-attraction-cine_municipal.json",
-        "025-attraction-club_deportivo.json",
-        "026-attraction-club_nautico.json",
-        "027-attraction-complejo_deportivo.json",
-        "028-attraction-complejo_termal_principal.json",
-        "029-attraction-convento_historico.json",
-        "030-attraction-corsodromo.json",
-        "031-attraction-costanera.json",
-        "032-attraction-delta_explorer.json",
-        "033-attraction-disco_local.json",
-        "034-attraction-edificio_gubernamental.json",
-        "035-attraction-embarcadero_turistico.json",
-        "036-attraction-estadio_municipal.json",
-        "037-attraction-estancia_turistica.json",
-        "038-attraction-fabrica_citricos.json",
-        "039-attraction-fabrica_dulces.json",
-        "040-attraction-feria_artesanal.json",
-        "041-attraction-galeria_comercial.json",
-        "042-attraction-gimnasio_municipal.json",
-        "043-attraction-granja_educativa.json",
-        "044-attraction-humedales.json",
-        "045-attraction-iglesia_colonial.json",
-        "046-attraction-kayak_rio.json",
-        "047-attraction-laguna_natural.json",
-        "048-attraction-marina_fluvial.json",
-        "049-attraction-mercado_agricola.json",
-        "050-attraction-mercado_central.json",
-        "051-attraction-mercado_gastronomico.json",
-        "052-attraction-monumento_historico.json",
-        "053-attraction-muelle_pesquero.json",
-        "054-attraction-museo_carnaval.json",
-        "055-attraction-museo_historico.json",
-        "056-attraction-museo_regional.json",
-        "057-attraction-navegacion_recreativa.json",
-        "058-attraction-observacion_aves.json",
-        "059-attraction-palacio_historico.json",
-        "060-attraction-panaderia_tradicional.json",
-        "061-attraction-parque_infantil.json",
-        "062-attraction-parque_municipal.json",
-        "063-attraction-parrilla_tradicional.json",
-        "064-attraction-paseo_peatonal.json",
-        "065-attraction-pesca_deportiva.json",
-        "066-attraction-piscinas_termales.json",
-        "067-attraction-pista_atletismo.json",
-        "068-attraction-plantacion_citricos.json",
-        "069-attraction-playa_fluvial.json",
-        "070-attraction-plaza_festivales.json",
-        "071-attraction-plaza_juegos.json",
-        "072-attraction-plaza_principal.json",
-        "073-attraction-polideportivo.json",
-        "074-attraction-pub_tradicional.json",
-        "075-attraction-puerto_deportivo.json",
-        "076-attraction-queseria_artesanal.json",
-        "077-attraction-reserva_natural.json",
-        "078-attraction-restaurante_regional.json",
-        "079-attraction-salon_baile.json",
-        "080-attraction-sede_carnaval.json",
-        "081-attraction-sendero_ecologico.json",
-        "082-attraction-sitio_arqueologico.json",
-        "083-attraction-spa_natural.json",
-        "084-attraction-taller_carnaval.json",
-        "085-attraction-termas_familiares.json",
-        "086-attraction-tour_citricola.json",
-        "087-attraction-vivero_municipal.json",
-        "088-attraction-zona_comercial.json"
-    ],
     "bookmarks": [
-        "001-bookmark-lucas-fernandez-destination-federacion.json",
-        "002-bookmark-sofia-morales-accommodation-hotel-plaza-gualeguaychu.json",
-        "003-bookmark-sofia-morales-post-carnaval-gualeguaychu.json",
-        "004-bookmark-sofia-morales-event-f47ac10b-58cc-4372-a567-0e02b2c3d703.json",
-        "005-bookmark-sofia-morales-destination-concordia.json",
-        "006-bookmark-sofia-morales-destination-gualeguaychu.json",
-        "007-bookmark-sofia-morales-user-f47ac10b-58cc-4372-a567-0e02b2c3d483.json",
-        "008-bookmark-sofia-morales-event-6125c3ad-7af7-4f43-bd9f-556870d8fbc5.json",
-        "009-bookmark-sofia-morales-post-termas-federacion-relax.json",
-        "010-bookmark-maría-gonzález-post-eventos-culturales-concordia.json",
-        "011-bookmark-maría-gonzález-post-historia-colon-palacio.json",
-        "012-bookmark-ana-rodríguez-accommodation-casa-termas-federacion.json",
-        "013-bookmark-ana-rodríguez-post-gastronomia-entrerriana.json",
-        "014-bookmark-ana-rodríguez-post-destinos-imperdibles-er.json",
-        "015-bookmark-usuario-invitado-post-aventura-delta-parana.json",
-        "016-bookmark-lucas-fernandez-post-tips-fotografia-entre-rios.json",
-        "017-bookmark-lucas-fernandez-destination-chajari.json"
+        "001-bookmark-002-user-carlos-martínez-accommodation-001-accommodation-chajari-cabin-retiro-soleado-cabana-chajari.json",
+        "002-bookmark-003-user-usuario-invitado-accommodation-002-accommodation-chajari-cabin-rio-soleado-cabana-chajari.json",
+        "003-bookmark-004-user-ana-rodríguez-accommodation-003-accommodation-chajari-country-house-sendero-natural-country-house-chajari.json",
+        "004-bookmark-005-user-miguel-torres-accommodation-004-accommodation-colon-cabin-cabana-del-rio-colon.json",
+        "005-bookmark-006-user-laura-vega-accommodation-006-accommodation-colon-hotel-mirador-soleado-hotel-colon.json",
+        "006-bookmark-008-user-lucas-fernandez-accommodation-007-accommodation-colon-house-nido-tranquilo-house-colon.json",
+        "007-bookmark-009-user-sofia-morales-accommodation-008-accommodation-colon-country-house-paraiso-calido-country-house-colon.json",
+        "008-bookmark-010-user-roberto-mendoza-accommodation-009-accommodation-colon-cabin-refugio-maravilloso-cabana-colon.json",
+        "009-bookmark-011-user-carmen-silva-accommodation-010-accommodation-colon-hotel-refugio-silvestre-hotel-colon.json",
+        "010-bookmark-012-user-fernando-lopez-accommodation-011-accommodation-colon-cabin-retiro-agradable-cabana-colon.json",
+        "011-bookmark-013-user-patricia-ruiz-accommodation-012-accommodation-colon-camping-retiro-encantado-camping-colon.json",
+        "012-bookmark-014-user-andres-castro-accommodation-013-accommodation-colon-room-rincon-natural-room-colon.json",
+        "013-bookmark-015-user-monica-herrera-accommodation-014-accommodation-colon-apartment-sueno-agradable-apartment-colon.json",
+        "014-bookmark-016-user-daniel-jimenez-accommodation-015-accommodation-colon-apartment-sueno-calido-apartment-colon.json",
+        "015-bookmark-017-user-silvia-moreno-accommodation-016-accommodation-colon-apartment-sueno-agradable-apartment-colon.json",
+        "016-bookmark-018-user-javier-ramirez-accommodation-017-accommodation-colon-apartment-sueno-agradable-apartment-colon.json",
+        "017-bookmark-019-user-claudia-torres-accommodation-018-accommodation-colon-apartment-sueno-agradable-apartment-colon.json",
+        "018-bookmark-020-user-sergio-vargas-accommodation-019-accommodation-colon-apartment-sueno-agradable-apartment-colon.json",
+        "019-bookmark-021-user-gabriela-medina-accommodation-020-accommodation-colon-apartment-sueno-agradable-apartment-colon.json",
+        "020-bookmark-022-user-ricardo-delgado-accommodation-021-accommodation-colon-apartment-sueno-agradable-apartment-colon.json",
+        "021-bookmark-023-user-beatriz-sanchez-accommodation-022-accommodation-colon-apartment-sueno-agradable-apartment-colon.json",
+        "022-bookmark-024-user-alejandro-ortega-accommodation-023-accommodation-colon-apartment-sueno-agradable-apartment-colon.json",
+        "023-bookmark-025-user-mariana-guerrero-accommodation-024-accommodation-colon-apartment-sueno-agradable-apartment-colon.json",
+        "024-bookmark-026-user-gustavo-pena-accommodation-025-accommodation-colon-apartment-sueno-agradable-apartment-colon.json",
+        "025-bookmark-027-user-valeria-aguilar-accommodation-026-accommodation-colon-apartment-sueno-agradable-apartment-colon.json",
+        "026-bookmark-028-user-ernesto-flores-accommodation-027-accommodation-colon-apartment-sueno-agradable-apartment-colon.json",
+        "027-bookmark-029-user-lucia-ramos-accommodation-028-accommodation-colon-apartment-sueno-agradable-apartment-colon.json",
+        "028-bookmark-030-user-hector-cabrera-accommodation-029-accommodation-colon-apartment-sueno-agradable-apartment-colon.json",
+        "029-bookmark-031-user-natalia-vega-accommodation-030-accommodation-colon-apartment-sueno-agradable-apartment-colon.json",
+        "030-bookmark-032-user-raul-molina-accommodation-031-accommodation-colon-apartment-sueno-agradable-apartment-colon.json",
+        "031-bookmark-002-user-carlos-martínez-destination-001-destination-chajari.json",
+        "032-bookmark-003-user-usuario-invitado-destination-002-destination-colon.json",
+        "033-bookmark-004-user-ana-rodríguez-destination-003-destination-concordia.json",
+        "034-bookmark-005-user-miguel-torres-destination-004-destination-federacion.json",
+        "035-bookmark-006-user-laura-vega-destination-005-destination-gualeguaychu.json",
+        "036-bookmark-008-user-lucas-fernandez-destination-006-destination-ibicuy.json",
+        "037-bookmark-009-user-sofia-morales-destination-007-destination-liebig.json",
+        "038-bookmark-010-user-roberto-mendoza-destination-008-destination-paranacito.json",
+        "039-bookmark-011-user-carmen-silva-destination-009-destination-san-jose.json",
+        "040-bookmark-012-user-fernando-lopez-destination-010-destination-ubajay.json",
+        "041-bookmark-013-user-patricia-ruiz-destination-011-destination-concepcion-del-uruguay.json",
+        "042-bookmark-014-user-andres-castro-destination-001-destination-chajari.json",
+        "043-bookmark-015-user-monica-herrera-destination-002-destination-colon.json",
+        "044-bookmark-016-user-daniel-jimenez-destination-003-destination-concordia.json",
+        "045-bookmark-017-user-silvia-moreno-destination-004-destination-federacion.json",
+        "046-bookmark-018-user-javier-ramirez-destination-005-destination-gualeguaychu.json",
+        "047-bookmark-019-user-claudia-torres-destination-006-destination-ibicuy.json",
+        "048-bookmark-020-user-sergio-vargas-destination-007-destination-liebig.json",
+        "049-bookmark-021-user-gabriela-medina-destination-008-destination-paranacito.json",
+        "050-bookmark-022-user-ricardo-delgado-destination-009-destination-san-jose.json",
+        "051-bookmark-023-user-beatriz-sanchez-destination-010-destination-ubajay.json",
+        "052-bookmark-024-user-alejandro-ortega-destination-011-destination-concepcion-del-uruguay.json",
+        "053-bookmark-025-user-mariana-guerrero-destination-001-destination-chajari.json",
+        "054-bookmark-026-user-gustavo-pena-destination-002-destination-colon.json",
+        "055-bookmark-027-user-valeria-aguilar-destination-003-destination-concordia.json",
+        "056-bookmark-002-user-carlos-martínez-event-002-event-culture-encuentro-historia-palacio-san-jose-2025.json",
+        "057-bookmark-003-user-usuario-invitado-event-005-event-nature-festival-naturaleza-victoria-2025.json",
+        "058-bookmark-004-user-ana-rodríguez-event-008-event-culture-exposicion-arte.json",
+        "059-bookmark-005-user-miguel-torres-event-010-event-business-feria-emprendedores.json",
+        "060-bookmark-006-user-laura-vega-event-013-event-gastronomy-curso-cocina.json",
+        "061-bookmark-008-user-lucas-fernandez-event-014-event-sports-competencia-pesca.json",
+        "062-bookmark-009-user-sofia-morales-event-015-event-education-charla-turismo.json",
+        "063-bookmark-010-user-roberto-mendoza-event-017-event-sports-torneo-ajedrez.json",
+        "064-bookmark-011-user-carmen-silva-event-019-event-nature-caminata-ecologica.json",
+        "065-bookmark-012-user-fernando-lopez-event-022-event-culture-tour-fotografico.json",
+        "066-bookmark-002-user-carlos-martínez-post-001-tourism-destinos-imperdibles-entre-rios.json",
+        "067-bookmark-003-user-usuario-invitado-post-002-gastronomy-gastronomia-entrerriana-sabores-autenticos.json",
+        "068-bookmark-004-user-ana-rodríguez-post-005-nature-aventura-delta-parana-ecoturismo.json",
+        "069-bookmark-005-user-miguel-torres-post-006-history-historia-colon-palacio-san-jose-urquiza.json",
+        "070-bookmark-006-user-laura-vega-post-008-events-eventos-culturales-concordia-agenda.json",
+        "071-bookmark-008-user-lucas-fernandez-post-010-festivals-festivales-de-musica-y-arte-en-entre-rios.json",
+        "072-bookmark-009-user-sofia-morales-post-011-art-arte-y-artesanias-tradicionales-entrerrianas.json",
+        "073-bookmark-010-user-roberto-mendoza-post-012-sports-deportes-acuaticos-en-los-rios-entrerrianos.json",
+        "074-bookmark-011-user-carmen-silva-post-013-nightlife-vida-nocturna-en-las-ciudades-entrerrianas.json",
+        "075-bookmark-012-user-fernando-lopez-post-018-general-guia-completa-para-visitar-entre-rios.json",
+        "076-bookmark-admin-user-user-002-user-carlos-martínez.json",
+        "077-bookmark-admin-user-user-004-user-ana-rodríguez.json",
+        "078-bookmark-admin-user-user-005-user-miguel-torres.json",
+        "079-bookmark-admin-user-user-009-user-sofia-morales.json",
+        "080-bookmark-admin-user-user-033-user-alejandra-cortes.json"
     ]
 }
