fix: fix and improve several issue with ts config

--- a/packages/config/tsconfig.json
+++ b/packages/config/tsconfig.json
@@ -1,6 +1,7 @@
 {
-    "extends": "@repo/typescript-config/base.json",
+    "extends": "../typescript-config/package-base.json",
     "compilerOptions": {
+        "types": ["node"],
         "outDir": "dist",
         "rootDir": "src",
         "declaration": true,
