--- a/packages/logger/package.json
+++ b/packages/logger/package.json
@@ -13,9 +13,9 @@
     },
     "files": ["dist"],
     "scripts": {
-        "build": "tsup src/index.ts --format esm,cjs --dts",
+        "build": "tsup",
         "dev": "echo 'Dev mode uses tsconfig paths (no build)'",
-        "typecheck": "tsc --noEmit",
+        "typecheck": "tsc --noEmit --project ./tsconfig.json",
         "test": "vitest run",
         "test:watch": "vitest",
         "lint": "biome check .",
