--- a/apps/api/tsconfig.json
+++ b/apps/api/tsconfig.json
@@ -1,32 +1,8 @@
 {
-    "extends": "@repo/typescript-config/base.json",
+    "extends": "../../packages/typescript-config/app-base.json",
     "compilerOptions": {
-        "strict": true,
-        "outDir": "dist",
-        "target": "ES2022",
-        "module": "NodeNext",
-        "moduleResolution": "NodeNext",
-        "lib": ["ES2022"],
-        "types": ["node"],
-        "resolveJsonModule": true,
-        "baseUrl": ".",
-        "rootDir": "../../",
-        "paths": {
-            "@/*": ["./src/*"],
-            "@repo/config": ["../../packages/config/src/index.ts"],
-            "@repo/config/*": ["../../packages/config/src/*"],
-            "@repo/db": ["../../packages/db/src/index.ts"],
-            "@repo/db/*": ["../../packages/db/src/*"],
-            "@repo/logger": ["../../packages/logger/src/index.ts"],
-            "@repo/logger/*": ["../../packages/logger/src/*"],
-            "@repo/schemas": ["../../packages/schemas/src/index.ts"],
-            "@repo/schemas/*": ["../../packages/schemas/src/*"],
-            "@repo/types": ["../../packages/types/src/index.ts"],
-            "@repo/types/*": ["../../packages/types/src/*"],
-            "@repo/utils": ["../../packages/utils/src/index.ts"],
-            "@repo/utils/*": ["../../packages/utils/src/*"]
-        }
+        "types": ["node"]
     },
-    "include": ["src"],
+    "include": ["src/**/*"],
     "exclude": ["dist", "node_modules"]
 }
