--- a/packages/db/package.json
+++ b/packages/db/package.json
@@ -15,12 +15,13 @@
     "files": ["dist"],
     "scripts": {
         "drizzle-kit": "tsx node_modules/drizzle-kit/bin.cjs",
-        "build": "tsup src/index.ts",
+        "build": "tsup",
         "dev": "echo 'Dev mode uses tsconfig paths (no build)'",
         "lint": "biome check .",
         "format": "biome format --write .",
         "check": "biome check --write .",
         "clean": "rm -rf node_modules dist",
+        "typecheck": "tsc --noEmit --project ./tsconfig.json",
         "db:migrate": "pnpm run drizzle-kit push:pg --config drizzle.config.ts",
         "db:generate": "pnpm run drizzle-kit generate:pg --config drizzle.config.ts",
         "db:studio": "pnpm run drizzle-kit studio --config drizzle.config.ts",
@@ -29,7 +30,6 @@
         "db:reset": "pnpm run db:drop && pnpm run db:push",
         "db:drop": "pnpm run drizzle-kit drop --config drizzle.config.ts",
         "db:push": "pnpm run drizzle-kit push:pg --config drizzle.config.ts",
-        "typecheck": "tsc --noEmit",
         "test": "vitest",
         "test:file": "vitest run",
         "test:coverage": "vitest run --coverage"
