--- a/packages/logger/tsconfig.json
+++ b/packages/logger/tsconfig.json
@@ -1,12 +1,8 @@
 {
-    "extends": "@repo/typescript-config/base.json",
+    "extends": "../typescript-config/package-base.json",
     "compilerOptions": {
-        "outDir": "dist",
-        "rootDir": "src",
-        "declaration": true,
-        "declarationMap": true,
-        "strict": true
+        "types": ["node"]
     },
-    "include": ["src"],
-    "exclude": ["dist", "node_modules"]
+    "include": ["src/**/*"],
+    "exclude": ["dist", "node_modules", "**/*.test.ts", "**/*.spec.ts"]
 }
