--- a/packages/seed/tsconfig.json
+++ b/packages/seed/tsconfig.json
@@ -1,32 +1,13 @@
 {
-    "extends": "../../packages/typescript-config/base.json",
+    "extends": "../typescript-config/package-base.json",
     "compilerOptions": {
         "outDir": "dist",
-        "rootDir": "../",
         "declaration": true,
         "declarationMap": true,
-        "strict": true,
         "types": ["node"],
-        "module": "ESNext",
-        "moduleResolution": "bundler",
-        "target": "ESNext",
-        "esModuleInterop": true,
-        "skipLibCheck": true,
-        "emitDeclarationOnly": true,
         "allowImportingTsExtensions": true,
-        "paths": {
-            "@/*": ["./src/*"],
-            "@repo/typescript-config/*": ["../../packages/typescript-config/src/*"],
-            "@repo/schemas": ["../../packages/schemas/src/index.ts"],
-            "@repo/schemas/*": ["../../packages/schemas/src/*"],
-            "@repo/types": ["../../packages/types/src/index.ts"],
-            "@repo/types/*": ["../../packages/types/src/*"],
-            "@repo/utils": ["../../packages/utils/src/index.ts"],
-            "@repo/utils/*": ["../../packages/utils/src/*"],
-            "@repo/db/*": ["../../packages/db/src/*"],
-            "@repo/service-core/*": ["../../packages/service-core/src/*"]
-        }
+        "noEmit": true
     },
-    "include": ["src", "test"],
-    "exclude": ["dist", "node_modules"]
+    "include": ["src/**/*"],
+    "exclude": ["dist", "node_modules", "**/*.test.ts", "**/*.spec.ts"]
 }
