--- a/packages/utils/tsconfig.json
+++ b/packages/utils/tsconfig.json
@@ -1,14 +1,8 @@
 {
-    "extends": "@repo/typescript-config/react-library.json", // Hereda del base (que tiene paths base)
+    "extends": "../typescript-config/package-base.json",
     "compilerOptions": {
-        // Considera heredar estas opciones del base si es posible
-        "outDir": "dist",
-        "target": "ESNext",
-        "module": "ESNext",
-        "moduleResolution": "bundler",
-        "strict": true, // Ya está en base.json
-        "lib": ["ESNext", "DOM"] // Se fusiona con libs del base
+        "types": ["node"]
     },
-    "include": ["src"],
-    "exclude": ["dist", "build", "node_modules"]
+    "include": ["src/**/*"],
+    "exclude": ["dist", "node_modules", "**/*.test.ts", "**/*.spec.ts"]
 }
