--- a/apps/api/package.json
+++ b/apps/api/package.json
@@ -1,5 +1,6 @@
 {
     "name": "hospeda-api",
+    "description": "Complete API for the Hospeda tourism accommodation platform",
     "version": "0.0.1",
     "private": true,
     "main": "dist/index.js",
@@ -13,12 +14,9 @@
         "typecheck": "tsc --noEmit --project ./tsconfig.json"
     },
     "dependencies": {
-        "@clerk/backend": "^1.32.3",
-        "@hono/clerk-auth": "^3.0.2",
-        "@hono/node-server": "^1.14.1",
+        "@hono/node-server": "^1.17.1",
         "@hono/swagger-ui": "^0.5.2",
         "@hono/zod-openapi": "^1.0.2",
-        "@hono/zod-validator": "^0.5.0",
         "@repo/config": "workspace:*",
         "@repo/db": "workspace:*",
         "@repo/logger": "workspace:*",
@@ -26,14 +24,12 @@
         "@repo/service-core": "workspace:*",
         "@repo/types": "workspace:*",
         "@repo/utils": "workspace:*",
-        "csrf": "^3.1.0",
+        "@scalar/hono-api-reference": "^0.9.12",
         "dotenv": "^16.5.0",
         "hono": "^4.7.8",
         "hono-rate-limiter": "^0.4.2",
-        "jose": "^5.2.3",
         "pg": "^8.15.6",
-        "stoker": "^1.4.3",
-        "zod": "^3.24.4"
+        "zod": "^4.0.8"
     },
     "devDependencies": {
         "@repo/typescript-config": "workspace:*",
