fix: update biome config to use for tests

--- a/packages/biome-config/biome.json
+++ b/packages/biome-config/biome.json
@@ -70,7 +70,7 @@
     },
     "overrides": [
         {
-            "include": ["tests/**", "__tests__/**"],
+            "include": ["tests/**", "__tests__/**", "test/**"],
             "linter": {
                 "rules": {
                     "suspicious": {
