--- a/apps/api/tsconfig.json
+++ b/apps/api/tsconfig.json
@@ -3,6 +3,7 @@
     "compilerOptions": {
         "types": ["node"]
     },
-    "include": ["src/**/*"],
-    "exclude": ["dist", "node_modules"]
+    "include": ["src/**/*", "test/**/*"],
+    "exclude": ["dist", "node_modules"],
+    "files": []
 }
