--- a/.gitignore
+++ b/.gitignore
@@ -5,6 +5,12 @@ node_modules
 .pnp
 .pnp.js
 
+# build
+dist
+build
+.next
+out
+
 # testing
 coverage
 
@@ -18,6 +24,7 @@ yarn-debug.log*
 yarn-error.log*
 
 # local env files
+.env
 .env.local
 .env.development.local
 .env.test.local
@@ -40,5 +47,12 @@ NOTES.txt
 
 packages/db/src/migrations/meta/_journal.json
 apps/api/package.prod.json
+
+
+# IDE
+.idea
+.vscode
+*.swp
+*.swo
 
 packages/seed/mappings/id-mappings.json
