feat: several implementation and improvements in api app (WIP)

--- a/apps/api/.env.example
+++ b/apps/api/.env.example
@@ -20,7 +20,6 @@ API_LOG_TRUNCATE_LONG_TEXT_AT=1000
 API_LOG_STRINGIFY_OBJECTS=false
 
 # CORS Configuration
-# Comma-separated list of allowed origins
 CORS_ORIGINS=http://localhost:3000,http://localhost:5173,http://localhost:4173
 # Set to 'true' to allow credentials (cookies, auth headers)
 CORS_ALLOW_CREDENTIALS=true
@@ -93,17 +92,35 @@ RATE_LIMIT_MESSAGE=Too many requests, please try again later.
 SUPPORTED_LOCALES=en,es
 DEFAULT_LOCALE=en
 
+# Validation Configuration
+# Maximum request body size in bytes (10MB)
+VALIDATION_MAX_BODY_SIZE=10485760
+# Maximum request time in milliseconds (30s)
+VALIDATION_MAX_REQUEST_TIME=30000
+# Comma-separated list of allowed content types
+VALIDATION_ALLOWED_CONTENT_TYPES=application/json,multipart/form-data
+# Comma-separated list of required headers
+VALIDATION_REQUIRED_HEADERS=user-agent
+# Enable/disable Clerk authentication validation
+VALIDATION_CLERK_AUTH_ENABLED=true
+# Comma-separated list of Clerk auth required headers
+VALIDATION_CLERK_AUTH_HEADERS=authorization
+# Enable/disable sanitization
+VALIDATION_SANITIZE_ENABLED=true
+# Maximum string length for sanitization
+VALIDATION_SANITIZE_MAX_STRING_LENGTH=1000
+# Remove HTML tags during sanitization
+VALIDATION_SANITIZE_REMOVE_HTML_TAGS=true
+# Allowed characters regex for sanitization
+VALIDATION_SANITIZE_ALLOWED_CHARS=[\\w\\s\\-.,!?@#$%&*()+=]
+
 # Security Configuration
 # Enable/disable security middleware
 SECURITY_ENABLED=true
-# Enable/disable CSRF protection
-SECURITY_CSRF_ENABLED=true
-# CSRF origin for validation
-SECURITY_CSRF_ORIGIN=http://localhost:3000
-# Comma-separated list of CSRF allowed origins
-SECURITY_CSRF_ORIGINS=http://localhost:3000,http://localhost:5173
 # Enable/disable security headers
 SECURITY_HEADERS_ENABLED=true
+
+
 # Content Security Policy
 SECURITY_CONTENT_SECURITY_POLICY=default-src 'self'; script-src 'self' 'unsafe-inline'; style-src 'self' 'unsafe-inline';
 # Strict Transport Security header
