--- a/apps/api/package.json
+++ b/apps/api/package.json
@@ -11,9 +11,15 @@
         "clean": "rm -rf node_modules dist",
         "lint": "biome check .",
         "format": "biome format --write .",
-        "typecheck": "tsc --noEmit --project ./tsconfig.json"
+        "typecheck": "tsc --noEmit --project ./tsconfig.json",
+        "test": "vitest run",
+        "test:watch": "vitest",
+        "test:file": "vitest run",
+        "test:coverage": "vitest run --coverage"
     },
     "dependencies": {
+        "@clerk/backend": "^2.6.2",
+        "@hono/clerk-auth": "^3.0.2",
         "@hono/node-server": "^1.17.1",
         "@hono/swagger-ui": "^0.5.2",
         "@hono/zod-openapi": "^1.0.2",
@@ -35,8 +41,10 @@
         "@repo/typescript-config": "workspace:*",
         "@types/node": "^22.15.3",
         "@types/pg": "^8.15.1",
+        "@vitest/coverage-v8": "^2.1.8",
         "tsup": "^8.4.0",
         "tsx": "^4.7.1",
-        "typescript": "^5.8.3"
+        "typescript": "^5.8.3",
+        "vitest": "^2.1.8"
     }
 }
