--- a/packages/db/.env.example
+++ b/packages/db/.env.example
@@ -1,1 +1,4 @@
-DATABASE_URL = 'postgresql://user:pass@db?sslmode=require'
+# Example local Postgres connection string for tests and development
+# Replace USER, PASSWORD, HOST, PORT and DBNAME with your local values
+# Disable SSL locally unless you have it configured
+DATABASE_URL=postgresql://USER:PASSWORD@HOST:PORT/DBNAME?sslmode=disable
