--- a/packages/service-core/package.json
+++ b/packages/service-core/package.json
@@ -2,7 +2,7 @@
     "name": "@repo/service-core",
     "version": "0.0.1",
     "private": true,
-    "module": "./dist/index.mjs",
+    "module": "./src/index.ts",
     "type": "module",
     "main": "./src/index.ts",
     "types": "./src/index.ts",
