--- a/turbo.json
+++ b/turbo.json
@@ -26,7 +26,7 @@
         },
         "test": {
             "dependsOn": ["build"],
-            "outputs": ["coverage/**"],
+            "outputs": [],
             "inputs": ["src/**/*.tsx", "src/**/*.ts", "test/**/*.ts", "test/**/*.tsx"]
         },
         "test:watch": {
