--- a/.gitignore
+++ b/.gitignore
@@ -44,6 +44,10 @@ NOTES.txt
 .vercel
 .astro
 
+# Vite cache
+**/.vite
+**/node_modules/.vite
+
 
 packages/db/src/migrations/meta/_journal.json
 apps/api/package.prod.json
@@ -56,3 +60,11 @@ apps/api/package.prod.json
 *.swo
 
 packages/seed/mappings/id-mappings.json
+
+dist-ssr
+*.local
+.nitro
+.tanstack
+.output
+.vinxi
+mcp-todos.json
