misc: update .env.example

--- a/apps/api/.env.example
+++ b/apps/api/.env.example
@@ -160,5 +160,6 @@ RESPONSE_ERROR_MESSAGE=An error occurred
 # Auth Configuration (optional)
 # CLERK_PUBLISHABLE_KEY=pk_test_...
 # CLERK_SECRET_KEY=sk_test_...
+#CLERK_WEBHOOK_SECRET
 
 
