--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -54,6 +54,9 @@
         "@types/pg": "^8.15.1",
         "@types/react": "^18.3.12",
         "@types/react-dom": "^18.3.1",
-        "astro-font-picker": "^0.2.2"
+        "astro-font-picker": "^0.2.2",
+        "tailwindcss": "^4.1.12",
+        "@tailwindcss/vite": "^4.1.12",
+        "lightningcss": "^1.28.1"
     }
 }
