--- a/apps/admin/tsconfig.json
+++ b/apps/admin/tsconfig.json
@@ -39,6 +39,8 @@
             "@repo/utils/*": ["../../packages/utils/src/*"],
             "@repo/auth-ui": ["../../packages/auth-ui/src/index.ts"],
             "@repo/auth-ui/*": ["../../packages/auth-ui/src/*"],
+            "@repo/icons": ["../../packages/icons/src/index.ts"],
+            "@repo/icons/*": ["../../packages/icons/src/*"],
             "@repo/tailwind-config": ["../../packages/tailwind-config/src/index.ts"],
             "@repo/tailwind-config/*": ["../../packages/tailwind-config/src/*"]
         }
