--- a/.env.example
+++ b/.env.example
@@ -1,9 +1,25 @@
+# Public Web — Environment Variables
+
+PUBLIC_API_BASE_URL=
+PUBLIC_DEFAULT_LOCALE=es
+PUBLIC_SUPPORTED_LOCALES=es,en,pt
+PUBLIC_SITE_URL=http://localhost:4321
+
+# Clerk
+PUBLIC_CLERK_PUBLISHABLE_KEY=
+CLERK_SECRET_KEY=
+
+# Sentry
+PUBLIC_SENTRY_DSN=
+SENTRY_ENVIRONMENT=development
+SENTRY_RELEASE=
+
 # Apps variables for the frontend and backend
 VITE_API_PORT = 8080
 VITE_API_HOST = 'http://localhost'
 
 # Apps variables only for backend
-API_CORS_ALLOWED_ORIGINS = ['http://localhost:3000']
+# CORS_ORIGINS = 'http://localhost:3000,http://localhost:4321,http://localhost:5173,http://localhost:4173'
 DATABASE_URL = 'postgresql://user:password@localhost:5432/dbname'
 
 # Logger for the frontend and backend
@@ -11,3 +27,48 @@ VITE_LOG_LEVEL = 'LOG'
 VITE_LOG_INCLUDE_TIMESTAMPS = true
 VITE_LOG_INCLUDE_LEVEL = true
 VITE_LOG_USE_COLORS = true
+
+# Metrics Configuration
+METRICS_ENABLED=true
+METRICS_SLOW_REQUEST_THRESHOLD_MS=1000
+METRICS_SLOW_AUTH_THRESHOLD_MS=2000
+
+# Rate Limiting Configuration - General
+RATE_LIMIT_ENABLED=true
+RATE_LIMIT_WINDOW_MS=900000
+RATE_LIMIT_MAX_REQUESTS=100
+RATE_LIMIT_KEY_GENERATOR=ip
+RATE_LIMIT_SKIP_SUCCESSFUL_REQUESTS=false
+RATE_LIMIT_SKIP_FAILED_REQUESTS=false
+RATE_LIMIT_STANDARD_HEADERS=true
+RATE_LIMIT_LEGACY_HEADERS=false
+RATE_LIMIT_MESSAGE=Too many requests, please try again later.
+
+# Rate Limiting Configuration - Auth Endpoints
+RATE_LIMIT_AUTH_ENABLED=true
+RATE_LIMIT_AUTH_WINDOW_MS=300000
+RATE_LIMIT_AUTH_MAX_REQUESTS=50
+RATE_LIMIT_AUTH_MESSAGE=Too many authentication requests, please try again later.
+
+# Rate Limiting Configuration - Public API
+RATE_LIMIT_PUBLIC_ENABLED=true
+RATE_LIMIT_PUBLIC_WINDOW_MS=3600000
+RATE_LIMIT_PUBLIC_MAX_REQUESTS=1000
+RATE_LIMIT_PUBLIC_MESSAGE=Too many API requests, please try again later.
+
+# Rate Limiting Configuration - Admin Endpoints
+RATE_LIMIT_ADMIN_ENABLED=true
+RATE_LIMIT_ADMIN_WINDOW_MS=600000
+RATE_LIMIT_ADMIN_MAX_REQUESTS=200
+RATE_LIMIT_ADMIN_MESSAGE=Too many admin requests, please try again later.
+
+# Cache Configuration (auto-detects runtime support)
+CACHE_ENABLED=true
+CACHE_DEFAULT_MAX_AGE=300
+CACHE_DEFAULT_STALE_WHILE_REVALIDATE=60
+CACHE_DEFAULT_STALE_IF_ERROR=86400
+CACHE_PUBLIC_ENDPOINTS=/api/v1/public/accommodations,/health
+CACHE_PRIVATE_ENDPOINTS=/api/v1/public/users
+CACHE_NO_CACHE_ENDPOINTS=/health/db,/docs
+CACHE_ETAG_ENABLED=true
+CACHE_LAST_MODIFIED_ENABLED=true
