--- a/apps/admin/package.json
+++ b/apps/admin/package.json
@@ -23,37 +23,39 @@
     "dependencies": {
         "@clerk/clerk-react": "5.42.0",
         "@faker-js/faker": "9.6.0",
+        "@github/relative-time-element": "^4.4.8",
+        "@pablotheblink/flashyjs": "^1.0.5",
         "@repo/auth-ui": "workspace:*",
         "@repo/i18n": "workspace:*",
         "@repo/icons": "workspace:*",
         "@repo/logger": "workspace:*",
         "@repo/types": "workspace:*",
+        "@tailwindcss/vite": "4.1.12",
         "@tanstack/match-sorter-utils": "8.19.4",
         "@tanstack/react-devtools": "0.2.2",
         "@tanstack/react-query": "5.59.20",
-        "@tanstack/react-table": "8.21.2",
-        "class-variance-authority": "0.7.1",
-        "clsx": "2.1.1",
-        "tailwind-merge": "3.0.2",
-        "tw-animate-css": "1.3.6",
-        "vite-tsconfig-paths": "5.1.4",
-        "zod": "3.25.76",
         "@tanstack/react-router": "1.131.26",
         "@tanstack/react-router-devtools": "1.131.26",
         "@tanstack/react-router-ssr-query": "1.131.26",
         "@tanstack/react-start": "1.131.26",
+        "@tanstack/react-table": "8.21.2",
         "@tanstack/router-plugin": "1.131.26",
+        "@vitejs/plugin-react": "4.7.0",
+        "class-variance-authority": "0.7.1",
+        "clsx": "2.1.1",
         "react": "19.1.1",
         "react-dom": "19.1.1",
-        "@vitejs/plugin-react": "4.7.0",
-        "@tailwindcss/vite": "4.1.12",
-        "tailwindcss": "4.1.12"
+        "tailwind-merge": "3.0.2",
+        "tailwindcss": "4.1.12",
+        "tw-animate-css": "1.3.6",
+        "vite-tsconfig-paths": "5.1.4",
+        "zod": "3.25.76"
     },
     "devDependencies": {
         "@biomejs/biome": "1.9.4",
         "@testing-library/dom": "10.4.0",
-        "@testing-library/react": "16.2.0",
         "@testing-library/jest-dom": "^6.6.3",
+        "@testing-library/react": "16.2.0",
         "@types/react": "19.1.10",
         "@types/react-dom": "19.1.7",
         "@vitejs/plugin-react": "4.3.4",
@@ -62,8 +64,8 @@
         "nodemon": "3.1.7",
         "typescript": "5.7.2",
         "vite": "6.3.5",
-        "vitest": "3.0.5",
         "vite-tsconfig-paths": "^5.1.4",
+        "vitest": "3.0.5",
         "web-vitals": "4.2.4"
     }
 }
