docs: update API environment configuration
- Update .env.example with current environment variables
- Update environment variables documentation

--- a/apps/api/.env.example
+++ b/apps/api/.env.example
@@ -157,6 +157,19 @@ RESPONSE_ERROR_MESSAGE=An error occurred
 # Database Configuration (optional)
 # DATABASE_URL=postgresql://user:password@localhost:5432/hospeda
 
+# Database Pool Configuration
+# Maximum number of connections in the pool
+DB_POOL_MAX_CONNECTIONS=10
+# Time in milliseconds to close idle connections (30 seconds)
+DB_POOL_IDLE_TIMEOUT_MS=30000
+# Time in milliseconds to wait for new connections (2 seconds)
+DB_POOL_CONNECTION_TIMEOUT_MS=2000
+
+# For Neon (production) - recommended values:
+# DB_POOL_MAX_CONNECTIONS=5
+# DB_POOL_IDLE_TIMEOUT_MS=10000
+# DB_POOL_CONNECTION_TIMEOUT_MS=5000
+
 # Auth Configuration (optional)
 # CLERK_PUBLISHABLE_KEY=pk_test_...
 # CLERK_SECRET_KEY=sk_test_...
