build: configure todo-linear system integration
- Add Linear API configuration to .env.example
- Update .gitignore for todo-linear tracking files
- Integrate todo-linear sync into pre-commit hooks

--- a/.env.example
+++ b/.env.example
@@ -72,3 +72,10 @@ CACHE_PRIVATE_ENDPOINTS=/api/v1/public/users
 CACHE_NO_CACHE_ENDPOINTS=/health/db,/docs
 CACHE_ETAG_ENABLED=true
 CACHE_LAST_MODIFIED_ENABLED=true
+
+# TODO-Linear Integration
+LINEAR_API_KEY=lin_api_xxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxx
+LINEAR_TEAM_ID=your-linear-team-id
+TODO_LINEAR_DEFAULT_USER_EMAIL=default@hospeda.com
+TODO_LINEAR_DEFAULT_USER_ID=default-user-linear-id
+TODO_LINEAR_DEFAULT_USER_NAME=Default Developer
