build: add --passWithNoTests flag to vitest scripts
- Add --passWithNoTests to all vitest run commands
- Ensure CI/CD passes for packages without tests
- Update both test and test:file scripts where applicable

--- a/apps/api/package.json
+++ b/apps/api/package.json
@@ -12,9 +12,9 @@
         "lint": "biome check .",
         "format": "biome format --write .",
         "typecheck": "tsc --noEmit --project ./tsconfig.json",
-        "test": "vitest run",
+        "test": "vitest run --passWithNoTests",
         "test:watch": "vitest",
-        "test:file": "vitest run",
+        "test:file": "vitest run --passWithNoTests",
         "test:coverage": "vitest run --coverage",
         "test:cache": "node test-cache.js"
     },
