--- a/packages/icons/package.json
+++ b/packages/icons/package.json
@@ -15,7 +15,7 @@
     "scripts": {
         "build": "tsup src/index.ts --format esm,cjs --dts --external react",
         "dev": "tsc --watch",
-        "test": "vitest run",
+        "test": "vitest run --passWithNoTests",
         "test:watch": "vitest",
         "test:coverage": "vitest run --coverage",
         "typecheck": "tsc --noEmit",
