--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -11,7 +11,7 @@
         "astro": "astro",
         "analyze": "astro build --verbose",
         "gen:translations-keys": "pnpm tsx scripts/generate-translation-keys.ts",
-        "test": "vitest run",
+        "test": "vitest run --passWithNoTests",
         "test:watch": "vitest",
         "test:coverage": "vitest run --coverage",
         "test:ui": "vitest --ui",
