--- a/packages/auth-ui/package.json
+++ b/packages/auth-ui/package.json
@@ -12,7 +12,7 @@
         }
     },
     "scripts": {
-        "test": "vitest run",
+        "test": "vitest run --passWithNoTests",
         "test:watch": "vitest",
         "test:coverage": "vitest run --coverage",
         "lint": "biome check .",
