--- a/packages/service-core/package.json
+++ b/packages/service-core/package.json
@@ -20,9 +20,9 @@
         "format": "biome format . --write",
         "clean": "rimraf .turbo node_modules dist",
         "typecheck": "tsc --noEmit --skipLibCheck",
-        "test": "vitest run",
+        "test": "vitest run --passWithNoTests",
         "test:watch": "vitest",
-        "test:file": "vitest run",
+        "test:file": "vitest run --passWithNoTests",
         "test:coverage": "vitest run --coverage"
     },
     "devDependencies": {
